@@ -2,6 +2,7 @@
 - !!:UI.VCAEngine: Sepecific properties, like help and syntax highlighting, is added to attributes, specified by primitive.
     Syntax highlight is added for primitives "ElFigure" and "Document".
 - !!:UI.Vision: Help display for widget's attributes is added.
+- !!:UI.Vision: Syntax highlighting display for widget's attributes is added.
 
 
 2010-11-05 Roman
